--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <div class="left-section">
-            <img src="dekusu logo.png" alt="ADNU Logo" class="logo">
-            <h1><span class="adnu">ADNU</span> <span class="dekusu">DEKUSU</span></h1>
-            <p class="subtitle">STUDENT'S HELPDESK DIRECTORY</p>
+            <img src="Dekusu images/dekusu logo.png" alt="ADNU Logo" class="logo">
+            <!-- <h1><span class="adnu">ADNU</span> <span class="dekusu">DEKUSU</span></h1>
+            <p class="subtitle">STUDENT'S HELPDESK DIRECTORY</p> -->
         </div>
         <div class="right-section">
             <div class="login-box">
