darkmode implementation in guest form

--- a/index.html
+++ b/index.html
@@ -41,18 +41,21 @@
             <div class="overlay-content">
                 <span class="close-btn" onclick="closeOverlay()">&times;</span>
                 <h2 class="formheader">Visitor Form</h2>
-                <form>
+                <form id = "visitorform">
                     <label for="visitor-name" class="formlabel">Please choose the reason for your visit.</label>
                     <br></br>
-                    <select id="Purpose">
-                      <option value="0" selected="selected">Purpose Of Visit:</option>
+                    <select id="Purpose" required>
+                      <option value="" disabled selected>Purpose Of Visit:</option>
                       <option value="1">Paying</option>
                       <option value="2">Inquiring</option>
                       <option value="3">Applying</option>
                       <option value="3">Other</option>
                     </select>
+                    <div>
+                        <button type="submit" class="continue">Continue</button>
+                    </div>
                 </form>
-                <button type="continue" class="continue">Continue</button>
+                
             </div>
         </div>
 
