Added Home Landing Page

--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -3,18 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADNU DEKUSU - Login</title>
-    <link rel="stylesheet" href="signupdekusu.css">
+    <title>ADNU DEKUSU - dashboard</title>
+    <link rel="stylesheet" href="/FINALPROJ-TRENDS/DEKUSU-JM/stylesheets/dashboard.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 
 </head>
 
     <body>
+            <header>
+                <nav>
+                    <ul class="nav_contents">
+                        <li><a class="Home" href="/FINALPROJ-TRENDS/DEKUSU-JM/Pages/dashboard.html">Home</a></li>
+                        <li><a class="Map" href="#">Map</a></li>
+                        <li><a class="Notifications" href="#">Notifications</a></li>
+                    </ul>
+                </nav>
+                <ul class="nav_contents">
+                    <li><a class="Profile" href="#">Profile</a></li>
+                </ul>
+            </header>
+        <div class="TITLE">
+        <h2><span class="ADNU">ADNU</span> <span class="DEKUSU">DEKUSU</span></h2>
+        <h2><span class="Student">Student</span> <span class="Helpdesk">Helpdesk</span></h2>
+        </div>
         
+        <script src="/FINALPROJ-TRENDS/DEKUSU-JM/Javascript/dashboardjs.js"></script>
     </body>
-
+    
 </html>
