--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADNU DEKUSU - dashboard</title>
-    <link rel="stylesheet" href="/FINALPROJ-TRENDS/DEKUSU-JM/stylesheets/dashboard.css">
+    <link rel="stylesheet" href="dashboard.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
         <h2><span class="Student">Student</span> <span class="Helpdesk">Helpdesk</span></h2>
         </div>
         
-        <script src="/FINALPROJ-TRENDS/DEKUSU-JM/Javascript/dashboardjs.js"></script>
+        <script src="dashboardjs.js"></script>
     </body>
     
 </html>
