--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -18,7 +18,7 @@
             <header>
                 <nav>
                     <ul class="nav_contents">
-                        <li><a class="Home" href="/FINALPROJ-TRENDS/DEKUSU-JM/Pages/dashboard.html">Home</a></li>
+                        <li><a class="Home" href="dashboard.html">Home</a></li>
                         <li><a class="Map" href="#">Map</a></li>
                         <li><a class="Notifications" href="#">Notifications</a></li>
                     </ul>
