uploaded files / PROFILE needs NAV BAR fix

--- a/map.html
+++ b/map.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADNU DEKUSU - dashboard</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="map.css">
+    <link rel="stylesheet" href="Pages/dashboard.css"> <!-- NAVBAR STYLE -->
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,20 +19,18 @@
             <header>
                 <nav>
                     <ul class="nav_contents">
-                        <li><a class="Home" href="dashboard.html">Home</a></li>
-                        <li><a class="Map" href="/map.html">Map</a></li>
+                        <li><a class="Home" href="/Pages/dashboard.html">Home</a></li>
+                        <li><a class="Map" href="map.html">Map</a></li>
                         <li><a class="Notifications" href="#">Notifications</a></li>
                     </ul>
                 </nav>
                 <ul class="nav_contents">
-                    <li><a class="Profile" href="/Profile.html">Profile</a></li>
+                    <li><a class="Profile" href="#">Profile</a></li>
                 </ul>
             </header>
-        <div class="TITLE">
-
-        <h2><span class="ADNU">ADNU</span> <span class="DEKUSU">DEKUSU</span></h2>
-        <h2><span class="Student">Student</span> <span class="Helpdesk">Helpdesk</span></h2>
-        </div>
+            <div class="map">
+                <img src="/Dekusu images/ADNU_MAP_ORIGINAL.webp" alt="ADNU Map">
+            </div>
         
         <script src="dashboardjs.js"></script>
     </body>
