--- a/Profile.html
+++ b/Profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADNU DEKUSU - Profile</title>
     <link rel="stylesheet" href="Profile_styles.css">
+    <link rel="stylesheet" href="/">
 </head>
 <body>
     <div class="navbar">
