--- a/Pages/notification.html
+++ b/Pages/notification.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADNU DEKUSU - dashboard</title>
-    <link rel="stylesheet" href="/stylesheets/dashboard.css">
+    <link rel="stylesheet" href="/stylesheets/notification.css">
     <link rel="stylesheet" href="/stylesheets/navbar.css">
 
     <!-- FONTS -->
@@ -14,8 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 
 </head>
-
-    <body>
         <header>
             <nav>
                 <ul class="nav_contents">
@@ -28,13 +26,25 @@
                     <li><a class="Profile" href="/Pages/Profile.html"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-480q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM160-160v-112q0-34 17.5-62.5T224-378q62-31 126-46.5T480-440q66 0 130 15.5T736-378q29 15 46.5 43.5T800-272v112H160Zm80-80h480v-32q0-11-5.5-20T700-306q-54-27-109-40.5T480-360q-56 0-111 13.5T260-306q-9 5-14.5 14t-5.5 20v32Zm240-320q33 0 56.5-23.5T560-640q0-33-23.5-56.5T480-720q-33 0-56.5 23.5T400-640q0 33 23.5 56.5T480-560Zm0-80Zm0 400Z"/></svg>Profile</a></li>
                 </ul>
         </header>
-
-        <div class="TITLE">
-            <h2><span class="ADNU">ADNU</span> <span class="DEKUSU">DEKUSU</span></h2>
-            <h2><span class="Student">Student</span> <span class="Helpdesk">Helpdesk</span></h2>
+    <body>
+        <div class="announcements">
+            <article>
+                <h2>Announcements: </h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </article> 
+            <article>
+                <h3>LOREM IPSUM</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </article>
+            <article>
+                <h3>LOREM IPSUM</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </article>
+            <article>
+                <h3>LOREM IPSUM</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </article>
         </div>
-        
-        <script src="/Js/dashboardjs.js"></script>
+        <script src="/Js/notification.js"></script>
     </body>
-    
 </html>
