Full Darkmode implementation

--- a/Pages/Profile.html
+++ b/Pages/Profile.html
@@ -49,6 +49,8 @@
             </nav>
         </header>
         
+        <button id="darkModeToggle" class="dark-mode-btn">☀</button>
+
             <div class="main-content" id="MAINCONTENT">
                 <div class="profile-box">
                     <div class="profile-picture" id="profilePic"></div>
