--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -47,7 +47,8 @@
                 </ul>
             </nav>
         </header>
-    
+        
+        <button id="darkModeToggle" class="dark-mode-btn">☀</button>
 
         <div class="TITLE">
             <h2><span class="ADNU">ADNU</span> <span class="DEKUSU">DEKUSU</span></h2>
