--- a/Pages/map.html
+++ b/Pages/map.html
@@ -49,7 +49,9 @@
                 </ul>
             </nav>
         </header>
-        
+
+            <button id="darkModeToggle" class="dark-mode-btn">☀</button>
+
             <div class="map">
                 <img src="/Dekusu images/ADNU_MAP_ORIGINAL.webp" alt="ADNU Map">
             </div>
