--- a/Pages/notification.html
+++ b/Pages/notification.html
@@ -47,6 +47,7 @@
         </nav>
     </header>
     <body>
+        <button id="darkModeToggle" class="dark-mode-btn">☀</button>
         <div class="announcements">
             <article>
                 <h2>Announcements: </h2>
